--- a/Projekt2/styles.css
+++ b/Projekt2/styles.css
@@ -85,5 +85,6 @@ button.margin:hover{
 
 .slider{
     -webkit-appearance: none;
+    border: solid grey 1px;
     background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 0, 0));
   }
