--- a/Projekt2/styles.css
+++ b/Projekt2/styles.css
@@ -29,6 +29,13 @@ body{
     margin: auto;
 }
 
+canvas{
+    border:1px solid #000000;
+    top: -300px;
+    left: -200px;
+}
+
+
 .toolBarBTN{
     width: 100%;
     height: 50px;
