--- a/Projekt2/styles.css
+++ b/Projekt2/styles.css
@@ -1,12 +1,13 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: rgb(241, 226, 255);
+    overflow: hidden;
 }
 
 #container{
     width: 100%;
     height: 100vh;
-    background-color: rgb(241, 226, 255);
     display: flex;
     flex-flow: row;
 }
@@ -26,13 +27,19 @@ body{
 }
 
 #workSpace{
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    display: block;
+    overflow: auto;
 }
+
 
 canvas{
     border:1px solid #000000;
-    top: -300px;
-    left: -200px;
+    margin-left: 50%;
+    margin-right: 50%;
+    margin-top: 50%;
+    margin-bottom: 50%;
 }
 
 
