--- a/Projekt3/noteStyles.css
+++ b/Projekt3/noteStyles.css
@@ -1,31 +1,50 @@
 div{
-    border: solid black 1px;
+    border: solid rgba(0, 0, 0, 0.37) 1px;
 }
 
+body{
+    margin: 0;
+}
+
+.insideNote{
+    margin: 5px;
+}
 
 /* CONTAINER */
 .noteContainer{
-    width: 70px;
-    min-height: 100px;
+    width: min-content;
     display: flex;
     flex-direction: column;
+    user-select: none;
+}
+
+.fold{
+    position: relative;
+    border: solid black 1px;
+    box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.199);
+    transform-origin: top left;
+}
+
+.fold:hover{
+    cursor: grab;
 }
 
 /* HEADER */
 .noteHeader{
-    width: 100%;
-    height: 30px;
+    width: 200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /* MAIN */
 .noteMain{
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    min-height: 200px;
 }
 
 /* FOOTER */
 .noteFooter{
-    width: 100%;
-    height: 10px;
+    width: 200px;
+    height: 20px;
     align-self: flex-end;
 }
