--- a/Projekt3/noteStyles.css
+++ b/Projekt3/noteStyles.css
@@ -58,6 +58,8 @@ body{
     width: 200px;
     padding-top: 10px;
     padding-bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 /* MAIN */
