--- a/Projekt3/noteStyles.css
+++ b/Projekt3/noteStyles.css
@@ -9,6 +9,7 @@ body{
     background-color: rgb(250, 246, 231);
 }
 
+
 #editSpace{
     visibility: hidden;
     position: absolute;
@@ -34,9 +35,15 @@ body{
     margin: 5px;
 }
 
-input[type="text"].insideNote {
+input[type="text"].insideNote, textarea.insideNote {
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid rgba(0, 0, 0, 0.37);
+    cursor: unset;
+}
+
+textarea.insideNote:disabled {
+    color: unset;
+    cursor: unset;
 }
 
 
@@ -61,23 +68,23 @@ input[type="text"].insideNote {
 
 /* HEADER */
 .noteHeader{
-    width: 200px;
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 20px;
     font-weight: bold;
     cursor: grab;
+    min-width: initial;
 }
 
 /* MAIN */
 .noteMain{
-    width: 200px;
+    min-width: 265px;
     min-height: 200px;
 }
 
 /* FOOTER */
 .noteFooter{
-    width: 200px;
+    width: initial;
     height: 20px;
-    align-self: flex-end;
+
 }
